// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskError /> should render properly with a fatal error 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-10 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Details
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Task Details
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-10"
    >
      Error Details
    </h2>
  </div>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Job: 
    Applying modules:  to gs://zorroa-dev-data
  </h3>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 32px;
}

.emotion-1 {
  padding-right: 8px;
}

.emotion-2 {
  color: #c92300;
  font-weight: 700;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#c92300"
        data-file-name="errorFatal.svg"
        height={18}
      />
    </div>
    <div
      className="emotion-2"
    >
      Error Type: 
      Fatal
    </div>
  </div>,
  .emotion-0 {
  padding-top: 16px;
}

.emotion-1 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-2 {
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      Error Message
      :
    </div>
    <div
      className="emotion-2"
    >
      ElasticsearchException[Elasticsearch exception [type=strict_dynamic_mapping_exception, reason=mapping set to strict, dynamic introduction of [checksum] within [metrics.pipeline] is not allowed]]
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-top: 24px;
}

.emotion-1 {
  position: relative;
  height: 100%;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <button
        aria-label="Toggle Dropdown Menu"
        className="emotion-2"
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      >
        Modify Task
        <svg
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-top: 16px;
}

.emotion-1 {
  padding-right: 64px;
}

.emotion-2 {
  padding-top: 16px;
}

.emotion-3 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-4 {
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Job ID
          :
        </div>
        <div
          className="emotion-4"
        >
          85f0d094-0631-104b-a57e-ce490d54f27a
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Task ID
          :
        </div>
        <div
          className="emotion-4"
        >
          d2bb6ad3-54d0-11ea-9250-32240f207bfa
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Error ID
          :
        </div>
        <div
          className="emotion-4"
        >
          85f0d09b-0631-104b-a57e-ce490d54f27a
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Host ID
          :
        </div>
        <div
          className="emotion-4"
        >
          not-implemented
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Phase
          :
        </div>
        <div
          className="emotion-4"
        >
          index
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          File Path
          :
        </div>
        <div
          className="emotion-4"
        >
          gs://zorroa-dev-data/image/cat.gif
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Processor
          :
        </div>
        <div
          className="emotion-4"
        >
          unknown
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Time of Error
          :
        </div>
        <div
          className="emotion-4"
        >
          2020-02-21 17:37:49
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa/errors/85f0d09b-0631-104b-a57e-ce490d54f27a"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Stack Trace
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  padding-bottom: 32px;
}

.emotion-1 {
  font-family: Roboto Mono;
  padding: 16px;
  background-color: #191919;
  word-break: break-all;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      "message": 
      ElasticsearchException[Elasticsearch exception [type=strict_dynamic_mapping_exception, reason=mapping set to strict, dynamic introduction of [checksum] within [metrics.pipeline] is not allowed]]
    </div>
    <JsonDisplay
      json={
        Array [
          Object {
            "className": "_process",
            "file": "/opt/app-root/src/analyst/pylib/zplugins/image/importers.py",
            "lineNumber": 43,
            "methodName": "path = Path(asset.get_local_source_path())",
          },
          Object {
            "className": "get_local_source_path",
            "file": "/opt/app-root/lib/python2.7/site-packages/zsdk/document/asset.py",
            "lineNumber": 220,
            "methodName": "local_cache_location = self.__source_handler.store_local_cache()",
          },
          Object {
            "className": "store_local_cache",
            "file": "/opt/app-root/lib/python2.7/site-packages/zsdk/document/sourcehandler.py",
            "lineNumber": 139,
            "methodName": "self.blob.download_to_filename(local_path)",
          },
          Object {
            "className": "download_to_filename",
            "file": "/opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py",
            "lineNumber": 759,
            "methodName": "raw_download=raw_download,",
          },
          Object {
            "className": "download_to_file",
            "file": "/opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py",
            "lineNumber": 722,
            "methodName": "_raise_from_invalid_response(exc)",
          },
          Object {
            "className": "_raise_from_invalid_response",
            "file": "/opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py",
            "lineNumber": 2156,
            "methodName": "raise exceptions.from_http_status(response.status_code, message, response=response)",
          },
        ]
      }
    />
  </div>,
]
`;

exports[`<TaskError /> should render properly with a non-fatal error 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-10 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Details
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Task Details
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-10"
    >
      Error Details
    </h2>
  </div>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Job: 
    Applying modules:  to gs://zorroa-dev-data
  </h3>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 32px;
}

.emotion-1 {
  padding-right: 8px;
}

.emotion-2 {
  color: #d6680b;
  font-weight: 700;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#d6680b"
        data-file-name="errorWarning.svg"
        height={18}
      />
    </div>
    <div
      className="emotion-2"
    >
      Error Type: 
      Warning
    </div>
  </div>,
  .emotion-0 {
  padding-top: 16px;
}

.emotion-1 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-2 {
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      Error Message
      :
    </div>
    <div
      className="emotion-2"
    >
      ElasticsearchException[Elasticsearch exception [type=strict_dynamic_mapping_exception, reason=mapping set to strict, dynamic introduction of [checksum] within [metrics.pipeline] is not allowed]]
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-top: 24px;
}

.emotion-1 {
  position: relative;
  height: 100%;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <button
        aria-label="Toggle Dropdown Menu"
        className="emotion-2"
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      >
        Modify Task
        <svg
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-top: 16px;
}

.emotion-1 {
  padding-right: 64px;
}

.emotion-2 {
  padding-top: 16px;
}

.emotion-3 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-4 {
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Job ID
          :
        </div>
        <div
          className="emotion-4"
        >
          85f0d094-0631-104b-a57e-ce490d54f27a
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Task ID
          :
        </div>
        <div
          className="emotion-4"
        >
          d2bb6ad3-54d0-11ea-9250-32240f207bfa
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Error ID
          :
        </div>
        <div
          className="emotion-4"
        >
          85f0d09b-0631-104b-a57e-ce490d54f27a
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Host ID
          :
        </div>
        <div
          className="emotion-4"
        >
          not-implemented
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Phase
          :
        </div>
        <div
          className="emotion-4"
        >
          index
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          File Path
          :
        </div>
        <div
          className="emotion-4"
        >
          gs://zorroa-dev-data/image/cat.gif
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Processor
          :
        </div>
        <div
          className="emotion-4"
        >
          unknown
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Time of Error
          :
        </div>
        <div
          className="emotion-4"
        >
          2020-02-21 17:37:49
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa/errors/85f0d09b-0631-104b-a57e-ce490d54f27a"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Stack Trace
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa/errors/85f0d09b-0631-104b-a57e-ce490d54f27a/asset"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Asset
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  padding-bottom: 32px;
}

.emotion-1 {
  font-family: Roboto Mono;
  padding: 16px;
  background-color: #191919;
  word-break: break-all;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      "message": 
      ElasticsearchException[Elasticsearch exception [type=strict_dynamic_mapping_exception, reason=mapping set to strict, dynamic introduction of [checksum] within [metrics.pipeline] is not allowed]]
    </div>
    <JsonDisplay
      json={
        Array [
          Object {
            "className": "_process",
            "file": "/opt/app-root/src/analyst/pylib/zplugins/image/importers.py",
            "lineNumber": 43,
            "methodName": "path = Path(asset.get_local_source_path())",
          },
          Object {
            "className": "get_local_source_path",
            "file": "/opt/app-root/lib/python2.7/site-packages/zsdk/document/asset.py",
            "lineNumber": 220,
            "methodName": "local_cache_location = self.__source_handler.store_local_cache()",
          },
          Object {
            "className": "store_local_cache",
            "file": "/opt/app-root/lib/python2.7/site-packages/zsdk/document/sourcehandler.py",
            "lineNumber": 139,
            "methodName": "self.blob.download_to_filename(local_path)",
          },
          Object {
            "className": "download_to_filename",
            "file": "/opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py",
            "lineNumber": 759,
            "methodName": "raw_download=raw_download,",
          },
          Object {
            "className": "download_to_file",
            "file": "/opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py",
            "lineNumber": 722,
            "methodName": "_raise_from_invalid_response(exc)",
          },
          Object {
            "className": "_raise_from_invalid_response",
            "file": "/opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py",
            "lineNumber": 2156,
            "methodName": "raise exceptions.from_http_status(response.status_code, message, response=response)",
          },
        ]
      }
    />
  </div>,
]
`;

exports[`<TaskError /> should render properly with a non-fatal error 2`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-10 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Details
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Task Details
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-10"
    >
      Error Details
    </h2>
  </div>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Job: 
    Applying modules:  to gs://zorroa-dev-data
  </h3>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 32px;
}

.emotion-1 {
  padding-right: 8px;
}

.emotion-2 {
  color: #d6680b;
  font-weight: 700;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#d6680b"
        data-file-name="errorWarning.svg"
        height={18}
      />
    </div>
    <div
      className="emotion-2"
    >
      Error Type: 
      Warning
    </div>
  </div>,
  .emotion-0 {
  padding-top: 16px;
}

.emotion-1 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-2 {
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      Error Message
      :
    </div>
    <div
      className="emotion-2"
    >
      ElasticsearchException[Elasticsearch exception [type=strict_dynamic_mapping_exception, reason=mapping set to strict, dynamic introduction of [checksum] within [metrics.pipeline] is not allowed]]
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-top: 24px;
}

.emotion-1 {
  position: relative;
  height: 100%;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  position: absolute;
  z-index: 1;
  top: 100%;
  right: 0;
  background-color: #808080;
  border-radius: 2px;
  box-shadow: 0 4px 7px 0 #000000;
  min-width: 200px;
  font-family: Roboto,Avenir,"sans-serif";
}

.emotion-3 ul {
  list-style-type: none;
  padding: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  margin: 0;
}

.emotion-3 li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus,
.emotion-4 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #4a4a4a;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <button
        aria-label="Toggle Dropdown Menu"
        className="emotion-2"
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      >
        Modify Task
        <svg
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
      <div
        className="emotion-3"
      >
        <div>
          <ul>
            <li>
              <button
                className="emotion-4"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                Retry Task
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-top: 16px;
}

.emotion-1 {
  padding-right: 64px;
}

.emotion-2 {
  padding-top: 16px;
}

.emotion-3 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-4 {
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Job ID
          :
        </div>
        <div
          className="emotion-4"
        >
          85f0d094-0631-104b-a57e-ce490d54f27a
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Task ID
          :
        </div>
        <div
          className="emotion-4"
        >
          d2bb6ad3-54d0-11ea-9250-32240f207bfa
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Error ID
          :
        </div>
        <div
          className="emotion-4"
        >
          85f0d09b-0631-104b-a57e-ce490d54f27a
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Host ID
          :
        </div>
        <div
          className="emotion-4"
        >
          not-implemented
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Phase
          :
        </div>
        <div
          className="emotion-4"
        >
          index
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          File Path
          :
        </div>
        <div
          className="emotion-4"
        >
          gs://zorroa-dev-data/image/cat.gif
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Processor
          :
        </div>
        <div
          className="emotion-4"
        >
          unknown
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Time of Error
          :
        </div>
        <div
          className="emotion-4"
        >
          2020-02-21 17:37:49
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa/errors/85f0d09b-0631-104b-a57e-ce490d54f27a"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Stack Trace
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa/errors/85f0d09b-0631-104b-a57e-ce490d54f27a/asset"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Asset
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  padding-bottom: 32px;
}

.emotion-1 {
  font-family: Roboto Mono;
  padding: 16px;
  background-color: #191919;
  word-break: break-all;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      "message": 
      ElasticsearchException[Elasticsearch exception [type=strict_dynamic_mapping_exception, reason=mapping set to strict, dynamic introduction of [checksum] within [metrics.pipeline] is not allowed]]
    </div>
    <JsonDisplay
      json={
        Array [
          Object {
            "className": "_process",
            "file": "/opt/app-root/src/analyst/pylib/zplugins/image/importers.py",
            "lineNumber": 43,
            "methodName": "path = Path(asset.get_local_source_path())",
          },
          Object {
            "className": "get_local_source_path",
            "file": "/opt/app-root/lib/python2.7/site-packages/zsdk/document/asset.py",
            "lineNumber": 220,
            "methodName": "local_cache_location = self.__source_handler.store_local_cache()",
          },
          Object {
            "className": "store_local_cache",
            "file": "/opt/app-root/lib/python2.7/site-packages/zsdk/document/sourcehandler.py",
            "lineNumber": 139,
            "methodName": "self.blob.download_to_filename(local_path)",
          },
          Object {
            "className": "download_to_filename",
            "file": "/opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py",
            "lineNumber": 759,
            "methodName": "raw_download=raw_download,",
          },
          Object {
            "className": "download_to_file",
            "file": "/opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py",
            "lineNumber": 722,
            "methodName": "_raise_from_invalid_response(exc)",
          },
          Object {
            "className": "_raise_from_invalid_response",
            "file": "/opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py",
            "lineNumber": 2156,
            "methodName": "raise exceptions.from_http_status(response.status_code, message, response=response)",
          },
        ]
      }
    />
  </div>,
]
`;

exports[`<TaskError /> should render properly with an asset 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-10 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Details
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <a
        className="emotion-2"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Task Details
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-10"
    >
      Error Details
    </h2>
  </div>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Job: 
    Applying modules:  to gs://zorroa-dev-data
  </h3>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 32px;
}

.emotion-1 {
  padding-right: 8px;
}

.emotion-2 {
  color: #c92300;
  font-weight: 700;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#c92300"
        data-file-name="errorFatal.svg"
        height={18}
      />
    </div>
    <div
      className="emotion-2"
    >
      Error Type: 
      Fatal
    </div>
  </div>,
  .emotion-0 {
  padding-top: 16px;
}

.emotion-1 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-2 {
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      Error Message
      :
    </div>
    <div
      className="emotion-2"
    >
      ElasticsearchException[Elasticsearch exception [type=strict_dynamic_mapping_exception, reason=mapping set to strict, dynamic introduction of [checksum] within [metrics.pipeline] is not allowed]]
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-top: 24px;
}

.emotion-1 {
  position: relative;
  height: 100%;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <button
        aria-label="Toggle Dropdown Menu"
        className="emotion-2"
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      >
        Modify Task
        <svg
          data-file-name="chevron.svg"
          height={20}
        />
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-top: 16px;
}

.emotion-1 {
  padding-right: 64px;
}

.emotion-2 {
  padding-top: 16px;
}

.emotion-3 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-4 {
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Job ID
          :
        </div>
        <div
          className="emotion-4"
        >
          85f0d094-0631-104b-a57e-ce490d54f27a
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Task ID
          :
        </div>
        <div
          className="emotion-4"
        >
          d2bb6ad3-54d0-11ea-9250-32240f207bfa
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Error ID
          :
        </div>
        <div
          className="emotion-4"
        >
          85f0d09b-0631-104b-a57e-ce490d54f27a
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Host ID
          :
        </div>
        <div
          className="emotion-4"
        >
          not-implemented
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Phase
          :
        </div>
        <div
          className="emotion-4"
        >
          index
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          File Path
          :
        </div>
        <div
          className="emotion-4"
        >
          gs://zorroa-dev-data/image/cat.gif
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Processor
          :
        </div>
        <div
          className="emotion-4"
        >
          unknown
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          Time of Error
          :
        </div>
        <div
          className="emotion-4"
        >
          2020-02-21 17:37:49
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-5 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa/errors/85f0d09b-0631-104b-a57e-ce490d54f27a"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Stack Trace
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/85f0d094-0631-104b-a57e-ce490d54f27a/tasks/d2bb6ad3-54d0-11ea-9250-32240f207bfa/errors/85f0d09b-0631-104b-a57e-ce490d54f27a/asset"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Asset
        </a>
      </li>
    </ul>
  </nav>,
  <TaskErrorAsset
    assetId="5o7oiiw9WhA5ZkkOn_KZcMxValbwOBvn"
  />,
]
`;
